# patients-dashboard

./: .gitignore  README.md  pyproject.toml  wsgi.py
data/sample_patients_data_from_hl7/: Adriana Lucas.json  Albert Knudsen.json  Alwin Wernecke.json  Amedeu Suciu.json  Ana Belén Aguado.json  Antony Smith.json  Arkadiusz Hass.json  Aurėja Grinius.json  Bettina Sauro.json  Bob Madsen.json  Carmen Cervantes.json  Christa Vleugels.json  Costel Popescu.json  Danielle Blanc.json  Dorota Juśkiewicz.json  Esperanza Campoy.json  Florica Nemeș.json  Gabriela Tavares.json  Gianfrancesco Moschino.json  Gianna Musatti.json  Hajo Metz.json  Ignazio Comboni.json  Jacob Dörr.json  Jayne Taylor.json  Jolanda Valentino.json  Judita Strnadová.json  Julianna Kwak.json  Juliette Schmitt.json  Krisztián Balogh.json  Leon Dworniczak.json  Lily van 't Houteveen.json  Lorelei Dima.json  Louis Thibault.json  Lucas Franz.json  Margaret Beyer.json  Margaud Tessier.json  Mary Campbell.json  Michelle Guyon.json  Miroslava Staňková.json  Noé Naranjo.json  (+10 more)
src/: conditions.py  main.py  medications.py  models.py  patient_match.py  procedures.py  startup.py
src/static/: script.js  style.css
src/templates/: index.html
